--- a/resume.yaml
+++ b/resume.yaml
@@ -22,7 +22,7 @@ basics:
       url: https://www.linkedin.com/in/berry-wirattama/
 work:
   - company: PT. Tibeka Logistic Indonesia (Waresix)
-    position: Tech Lead DevOps
+    position: DevOps Manager
     website: https://www.waresix.com
     startDate: '2020-10-25'
     summary: Build Transport management system SME and Enterprise
