--- a/resume.yaml
+++ b/resume.yaml
@@ -1,47 +1,27 @@
 basics:
   name: Berry Wirattama
-  label: DevOps Engineer
-  email: berry.wirattama@gmail.com
-  website: https://berrywirattama.github.io
+  label: Chief Technology Officer
+  email: berry.wirattama@gmail.com/berry@sotech.co.id
+  website: https://berry.wirattama.com
   summary: |
-    I am a DevOps engineer seeking a full-time position in the field of any related,
-    where I can apply my technical knowledge and skills for continuous improvement.
+    Dynamic and accomplished CTO with a proven track record in technology leadership, strategic planning, and innovative solutions. Expertise in managing and supervising diverse technical teams including SRE, DBA, DevOps, and Security. Skilled in driving digital transformation, cloud migration (GCP to AWS), and revamping cloud architecture using Kubernetes. Adept at aligning technology initiatives with business goals, enhancing operational efficiency, and ensuring security. Passionate about fostering continuous improvement, mentoring teams, and implementing advanced CI/CD processes.
   location:
     countryCode: ID
     region: DKI Jakarta
   profiles:
-    - network: Twitter
-      username: berryory
-      url: https://twitter.com/berryory
     - network: GitHub
       username: berrywirattama
       url: https://github.com/berrywirattama
-    - network: LinkedIn
-      username: berrywirattama
-      url: https://www.linkedin.com/in/berry-wirattama/
 work:
-  - company: PT. Tibeka Logistic Indonesia (Waresix)
-    position: DevOps Manager
-    website: https://www.waresix.com
+  - company: PT. Sosial Teknologi Indonesia
+    position: Chief Technology Indonesia
+    website: https://sotech.co.id/
     startDate: '2020-10-25'
     summary: Build Transport management system SME and Enterprise
     highlights:
-      - Manage and supervision SRE, DBA, DevOps & Security teams
-      - Create milestone of project for each team
-      - Control project on Tech Ops team
-      - Migrate cloud from GCP to AWS
-      - Revamp architecture cloud (Kubernetes)
-      - Advisor to oncall model & OKR on company
-      - Inisiate incident response and postmortem result
-      - Create new flow branching and development flow
-      - CICD end-to-end, integration, delivery, deployment, tagging, and rollback
-      - Guiding teams according to interests
-      - Do 1 on 1 biweekly with member
-      - Prototype new architecture
-      - Influence unittest & stylecode
-      - Fixing security problem
-      - Practice cloud control
-      - Convert request on-call into slackbot(self service)
+      - Led and supervised SRE, DBA, DevOps, and Security teams.
+      - Defined project milestones and managed team deliverables.
+      - Help based on client needs.
   - company: PT. Aliansi Teknologi Indonesia (Dana Indonesia)
     position: Senior staff SRE (Lead)
     website: https://dana.id/
